--- a/P5 react/src/sass/annonce.scss
+++ b/P5 react/src/sass/annonce.scss
@@ -1,16 +1,124 @@
 .info{
-    display: flex;
+    width: 1440px;
+    margin-left: 100px;
+    margin-right: 100px;
+
 
     img{
         width: 100%;
         height: 415px;
-        
-
     }
-}
-h3{
 
+}
+
+h3{
+    font-family: Montserrat;
+    height: 100%;
+    font-size: 36px;
+    font-weight: 500;
+    text-align: left;
+    margin-top: 20px;
+    margin-bottom: 0;
+    color: #FF6060;
 }
 p{
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 25.67px;
+    text-align: left;
+    margin: 0;
+    
+}
 
+.button {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.buttonDescription, .buttonEquipements {
+    width: 45%;
+}
+.accordion {
+    background-color: #FF6060;
+    height: 52px;
+    width: 100%;
+    color: white;
+    cursor: pointer;
+    border-radius: 12px;
+    padding: 10px;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+.accordion:hover,
+.accordion:focus {
+    background-color: #FF6060;
+}
+
+.panel {
+    padding: 0 10px;
+    background-color: white;
+    display: none;
+    width: 45%;
+
+
+}
+
+.panel.open {
+    display: block;
+    max-height: 1000px; 
+}
+
+//  **********tags**********
+
+.tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; 
+    margin-bottom: 20px;
+}
+
+.tag {
+    background-color: #FF6060;
+    color: white;
+    padding: 5px 10px; 
+    border-radius: 12px; 
+    margin: 5px 0; 
+    font-size: 14px; 
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 19.96px;
+    text-align: center;
+    
+}
+.host {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+    
+    p {
+        font-family: Montserrat;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 25.67px;
+        
+    }
+    img{
+        width: 64px;
+        height: 64px;
+        border-radius: 100%;
+        
+    }
+    .hostPhoto{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
 }
