--- a/P5 react/src/sass/header.scss
+++ b/P5 react/src/sass/header.scss
@@ -1,6 +1,6 @@
 // header
 header{
-    margin: 40px 100px;
+    margin: 2vw 6vw;
     display: flex;
     justify-content: space-between;
 
@@ -12,7 +12,7 @@ header img{
 }
 
 header nav{
-    width: 20%;
+    width: 100%;
     display: flex;
     
 
@@ -21,7 +21,8 @@ header nav{
 header ul{
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: end;
+    gap: 7%;
     font-family: Montserrat;
     font-size: 24px;
     font-weight: 500;
@@ -44,4 +45,22 @@ header a{
 
 header li:hover{
     text-decoration: underline;
+}
+
+@media (max-width: 800px) {
+    header{
+        margin: 4%
+
+    }
+    ul{
+        display: flex;
+        gap: 10%;
+    }
+    li{
+        font-size: 15px;
+        font-weight: 550;
+        line-height: 17.11px;
+        text-transform: uppercase;
+        
+    }
 }
