--- a/P5 react/src/sass/CarrouselAnnonce.scss
+++ b/P5 react/src/sass/CarrouselAnnonce.scss
@@ -46,3 +46,15 @@
     padding: 10px;
     cursor: pointer;
 }
+
+@media (max-width: 800px) {
+    .carousel{
+        height: 225px;
+    }
+    .carousel-inner img {
+    height: 225px;
+    }
+    .carousel-buttons button {
+        font-size: 2rem;
+    }
+}
