--- a/P5 react/src/sass/footer.scss
+++ b/P5 react/src/sass/footer.scss
@@ -5,7 +5,7 @@ footer{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
     background: #000;
 }
 
@@ -21,4 +21,15 @@ footer p{
 footer img{
     width: 122px;
     height: 40px;
+}
+
+@media (max-width: 800px) {
+    footer{
+        gap: 20px;
+    }   
+    footer p{
+        width: 35%;
+        font-size: 12px;
+        line-height: 17.11px;
+    }
 }
