--- a/P5 react/src/sass/home.scss
+++ b/P5 react/src/sass/home.scss
@@ -1,6 +1,11 @@
 .home {
+    margin: 2vw 6vw;
+
     .banner {
       position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       width: 100%;
       height: 223px;
       border-radius: 25px;
@@ -32,11 +37,9 @@
     }
     
     h1 {
-      position: absolute;
-      margin: 0;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      width: 95%;
+      text-align: center;
+      margin: 0 15px;
       color: white;
       font-family: Montserrat;
       font-size: 48px;
@@ -45,9 +48,23 @@
     }
   }
 
-  .card {
-
+  @media (max-width: 480px) {
+    .home{
+      margin: 0 6vw 20px 6vw;
+    }
+    .home .banner {
+      height: 111px;
+      margin: 0 0 20px 0;
+    }
+   .home h1 {
+    font-family: Montserrat;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 24px;
+    text-align: left;
+    
   }
+}
 
 
 
