--- a/P5 react/src/sass/thumb.scss
+++ b/P5 react/src/sass/thumb.scss
@@ -32,12 +32,38 @@ cursor: pointer;
 .thumb h2{
     position: absolute;
     bottom: 5px; 
-    left: 25px; 
+    margin: 15px;
     font-family: Montserrat;
     font-size: 18px;
     font-weight: 700;
     line-height: 25.67px;
     text-align: left;
     cursor: pointer;
+    
+}
+
+// version tablette
+@media (max-width: 1024px) {
+    .grid{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
+}
+@media (max-width: 800px) {
+    .grid{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .thumb {
+        aspect-ratio: initial;
+    }
+    
+    
+}
+@media (max-width: 480px) {
+    .grid{
+        background: none;
+        padding: 0;
+        gap: 20px;
+    }
     
 }
