--- a/P5 react/src/sass/thumb.scss
+++ b/P5 react/src/sass/thumb.scss
@@ -52,6 +52,10 @@ cursor: pointer;
 @media (max-width: 800px) {
     .grid{
         grid-template-columns: repeat(1, 1fr);
+        padding: 5%;
+        gap: 25px;
+        // padding-bottom: 55px;
+        // padding-right: 55px;
     }
     .thumb {
         aspect-ratio: initial;
