--- a/P5 react/src/sass/annonce.scss
+++ b/P5 react/src/sass/annonce.scss
@@ -47,14 +47,10 @@
                 font-weight: 500;
                 line-height: 25.67px;
                 text-align: left;
-                margin: 2px 0 12px 0;
-                
+                margin: 2px 0 12px 0;             
             }
-            
-
         }
     }
-
 }
 
 .button {
@@ -190,6 +186,15 @@ i {
 @media (max-width: 800px) {
     .info {
         margin: 4% 25px ;
+        .host{
+            align-items: normal;
+            .title{
+                h3{
+                    font-size: 18px;
+                    margin: 0;
+                }
+            }
+        }
     }
     .tagAndStars{
         flex-direction: column;
