--- a/P5 react/src/sass/thumb.scss
+++ b/P5 react/src/sass/thumb.scss
@@ -58,6 +58,9 @@ cursor: pointer;
     .thumb {
         aspect-ratio: initial;
     }
+    .thumb img {
+        height: 255px;
+    }
     
     
 }
