--- a/P5 react/src/sass/accordion.scss
+++ b/P5 react/src/sass/accordion.scss
@@ -27,6 +27,9 @@
         transition: transform 0.3s ease;
         margin-right: 10px;
       }
+      i.open {
+        transform: rotate(180deg);
+      }
 
       &.open {
         i {
